# Bubble-Boy

./: .gitignore  ARCHITECTURE.md  BB_MOTION_STANDARD.md  README.md  ROADMAP.md  SIMULATION_CORE.md  pyproject.toml
.agent-loop/: BACKLOG.md  OBJECTIVE.md  project-gates.md
.agent-loop/config/: loop.config.json  planner-purpose.md
.agent-loop/policies/: protected-files.md  repo-hygiene.md
bubble/: home.md  memory.json  status.md
bubble/logs/: initial_state.md
bubble/proposals/: 20260610T075849Z-seed-the-action-log-with-scaffold-state-69318672.json  20260611T000157Z-create-a-proposal-ledger-index-203471f0.json  20260611T000729Z-log-current-bubble-state-as-daily-entry-129974fe.json  20260611T000937Z-catalogue-the-bubble-with-a-bubble-inventory-art-0e58d4bf.json  20260611T001734Z-read-the-catalogue-and-produce-a-bubble-inventor-ee6d4458.json  20260611T002429Z-log-user-greeting-to-chat-log-8ebd8296.json  20260616T041048Z-verify-the-toybox-artifact-and-report-state-a56b09cd.json  20260616T041102Z-append-a-first-active-timestamp-to-the-daily-log-10f48bc3.json  index.md  (+1 more)
bubble_boy/: checks.py  cli.py  config.py  mind.py  personality.py  policy.py  proposals.py  storage.py  survival.py  tools.py
bubble_boy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bubble_ui/: server.py
docs/: BB_100_DAY_LOOP_ROADMAP.md
reports/: 100_day_asset_animation_readiness_audit_2026_06_24.md  first-five-days-visual-state-2026-06-27.md
tests/: test_personality.py  test_policy.py  test_sim_regression.py  test_storage.py  test_survival.py  test_toybox_simulation.py
(+86 files in other folders)
